--- a/homepage/css/master.css
+++ b/homepage/css/master.css
@@ -1,23 +1,27 @@
 *
 {
-  margin: 5px;
+  margin: 0;
   padding: 0;
-  max-width: 99%
+  /*height: 100%;*/
+  /*max-width: 100vh;*/
+}
+#snowshoe {
+  position: static;
+  float: left;
+  margin: 0;
+  width: 8rem;
+  /*opacity: .25;*/
 }
 
 header
 {
   background-color: lightblue;
-  /*font-size: 97%;*/
   text-align: center;
-  /*font-stretch: expanded;*/
   font-variant: small-caps;
-  /*max-width: 95%;*/
-  /*white-space: nowrap;*/
   border-radius: 1rem;
   margin: 2%;
-  min-height: 20%;
-  max-height: 20%;
+  height: 20vh;
+  /*height: 20vh;*/
 }
 
 h1
@@ -29,18 +33,37 @@ h2, h3
 {
   margin-left: 15px;
 }
+.navigation {
+  /*border: 5px black groove;*/
+  /*border-radius: 15px;*/
+  display: flex;
+  float: center;
+  justify-content: space-between;
+  list-style-type: none;
+  margin: 1rem;
+  /*list-style:*/
+}
+
+.button {
+  background-color: skyblue;
+  border: 3px royalblue groove;
+  border-radius: 0.5rem;
+}
 
 body
 {
-  min-height: 75%;
-  max-height: 75%:
+  /*min-height: 75%;
+  max-height: 75%:*/
+  height: 75vh;
+  padding-bottom: 5vh;   /* Height of the footer */
+
 }
 #sidebar
 {
   margin-left: 2%;
   /*margin-right: 1%;*/
   float: left;
-  width: 23%;
+  width: 22.5%;
   background: #eee;
   min-height: 100%;
   border-radius:15px;
@@ -48,10 +71,10 @@ body
 
 #main
 {
-  /*margin-left: 1%;*/
+  margin-left: 1%;
   /*margin-right: 1%:*/
-  float: right;
-  width: 73%;
+  float: left;
+  width: 72.5%;
   background: lemonchiffon;
   max-height: 100%;
   border-radius: 15px;
@@ -69,13 +92,41 @@ ul {
 }
 
 #mcc {
+  /*border: 0.25rem black dotted;*/
+  border-radius: 1rem;
   max-height: 24.5%;
 }
 
 #bcc {
+  /*border: 0.25rem red dotted;*/
+  border-radius: 1rem;
   max-height: 24.5%;
 }
 
 #lcc {
+  /*border: 0.25rem black dotted;*/
+  border-radius: 1rem;
   max-height: 24.5%;
+}
+
+
+
+.footer{
+  border-radius: 0.5rem;
+  /*float: left;*/
+  /*list-style-type: none;*/
+  margin: 1rem;
+  position: absolute;
+  bottom: 0;
+  width: 98%;
+  height: 5vh;   /* Height of the footer */
+
+  background: #6cf;
+
+  display: flex;
+  /*flex-direction: row;*/
+  /*flex-wrap: nowrap;*/
+  /*align-items: flex-end;*/
+  justify-content: space-between;
+  list-style-type: none;
 }
